WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264005
[Site Isolation] Null pointer dereferences in ServicesOverlayController
https://bugs.webkit.org/show_bug.cgi?id=264005
Summary
[Site Isolation] Null pointer dereferences in ServicesOverlayController
Charlie Wolfe
Reported
2023-10-31 15:34:22 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-31 15:34:50 PDT
<
rdar://problem/117767532
>
Charlie Wolfe
Comment 2
2023-10-31 15:45:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19800
EWS
Comment 3
2023-11-06 10:26:55 PST
Committed
270275@main
(7413ad1495ca): <
https://commits.webkit.org/270275@main
> Reviewed commits have been landed. Closing PR #19800 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug