[Site Isolation] Null pointer dereferences in ServicesOverlayController https://bugs.webkit.org/show_bug.cgi?id=264005 rdar://117767532

Reviewed by Alex Christensen.

We should early return instead of crash when the main frame is being hosted in another process.

This probably still isn't the correct behavior and will need to be fixed later.

* Source/WebCore/page/mac/ServicesOverlayController.h:
* Source/WebCore/page/mac/ServicesOverlayController.mm:
(WebCore::ServicesOverlayController::remainingTimeUntilHighlightShouldBeShown const):
(WebCore::ServicesOverlayController::buildPhoneNumberHighlights):
(WebCore::ServicesOverlayController::buildSelectionHighlight):
(WebCore::ServicesOverlayController::mouseEvent):
(WebCore::ServicesOverlayController::handleClick):
(WebCore::ServicesOverlayController::mainFrame const): Deleted.

Canonical link: https://commits.webkit.org/270275@main